   - Support settable I/O poll dwell time.
April 15, 2005
   - Began integrating a rewritten treeparameter into the software.
April 16, 2005
   - In contrib/calibparam : add a random number in [-.5, .5] to the
     input of the calibration under the assumption that the input is
     integer and therefore needs to be turned into a real.
April 18, 2005
   - Added documentation to the treeparamter package.
April 19, 2005
   - Fix up a tcl 8.4 dependency in CTreeVariableProperties.cpp
April 21, 2005
   - Fix up coordinate transform problems in Xamine with grobj locations.
     Scaled wrong and offset wrong.
   - Make it a bit clearer that the Treeparameter GUI version is decoupled
     from SpecTcl's version... for now.
April 22, 2005
   - Remove nulls from Xamine's log files and replace them with \n's instead.
April 29, 2005
   - TreeParameter save function didn't always get the dependencies right 
     causing error in loading.  Changed functions in SpectrumGenerator.tcl.
     Fix for bugzilla bug 173
May 2, 2005
   - Ensure filters get closed if active at program normal exit.
   - Encapsulate Xamine's gates and grobs inside a vector so that there's no 
     longer a fixed compilation limit on the number of gates /objects that
     can be defined.
   - Support GCC-3.4 compiler
May 11, 2005 
  - Added support for StripChart Spectra
  - Check the compiler type in configure to see if we can use -pedantic
     and do so if we can.
  - Debug -pedantic effects on compilation.
  - Fix defects nobody noticed in swrite -format binary/sread -format binary
    Probably introduced about SpecTcl-2.0  
May 12, 2005
  - Fixed attach -format .... error that probably only expresses on 
    gcc-3.x since nobody's seen/reported it but me until now
May 13, 2005
  - Fixed problem in Strip chart so that the parameter list is returned 
    in the correct order
--------------------------- End of Pre3 mods ------------
May 17, 2005
  - Set map to on by default in Xamine.